# YouTranser

EyerLib/src/: CMakeLists.txt
EyerLib/src/EyerAV/: EyerAVEncoder.cpp  EyerAVPacket.cpp  EyerAVReader.cpp  EyerAVReader.hpp  EyerAVTranscode.cpp  EyerAVTranscodeParams.cpp  EyerAVTranscodeParams.hpp
EyerLib/src/EyerCore/: EyerTime.cpp
You_QT/You/: CMakeLists.txt
You_QT/You/YouCommon/: LoginWindow.cpp
You_QT/You/YouTranser/: CMakeLists.txt  TaskItem.cpp  TaskItem.hpp  TaskItemStatusLabel.cpp  TaskItemStatusLabel.hpp  TranscodeTaskThread.cpp  TranscodeTaskThread.hpp  YouTransConfig.cpp  YouTransConfig.hpp  YouTransMainWindow.cpp  YouTransMainWindow.hpp  YouTranscoderParams.cpp  YouTranscoderParams.hpp  main.cpp
You_QT/You/doc/: EyerLib学习计划.md  EyerLib技术架构文档.md
tools/make_3rdpart_m1/: make_x265.sh
